# Python-et-Chat-GPT

./: .env  README.md  app.py  pyproject.toml
static/src/css/: input.css
templates/: index.html
